<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/popup_background">


        <TextView
            android:id="@+id/criteriaLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud_8_16_caracteres"
            android:textSize="12sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/criteriaUppercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_una_letra_may_scula"
            android:textSize="12sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/criteriaLowercase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_una_letra_min_scula"
            android:textSize="12sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/criteriaNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_un_n_mero"
            android:textSize="12sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/criteriaSpecialChar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_menos_un_car_cter_especial"
            android:textSize="12sp"
            android:textColor="#000000" />
    </LinearLayout>
