<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRegister"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints=""
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/birth_date"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDate"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints=""
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/editTextRepeatPassword"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/avatar"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:onClick="onSelectAvatarClicked" />

        <Button
            android:id="@+id/buttonPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:onClick="onSelectAvatarClicked" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkboxTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_terms"
        android:layout_below="@id/buttonLayout"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:text="@string/save"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkboxTerms"
        android:layout_marginTop="29dp"
        android:textSize="16sp"/>
</RelativeLayout>
