<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/contraseniaCambiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/camabir_contra_a"
            android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/passwordRecuperacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmPasswordConfirmacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repite_la_contrase_a"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <Button
        android:id="@+id/savePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>


    </LinearLayout>
</ScrollView>
