<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/food"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="16dp"/>

    <Button
        android:id="@+id/inicio"
        android:layout_width="195dp"
        android:layout_height="90dp"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        android:backgroundTint="@color/orange"
        android:text="@string/inicio_sesion"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/registrase"
        android:layout_width="195dp"
        android:layout_height="90dp"
        android:layout_below="@id/inicio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/derechos_reservados"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="12dp"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
