<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivUserPhoto"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/usernameAdmi"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/ivUserPhoto"
            app:layout_constraintTop_toTopOf="@id/ivUserPhoto"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/birthdate"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/ivUserPhoto"
            app:layout_constraintTop_toBottomOf="@id/tvUsername"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/ivUserPhoto"
            app:layout_constraintTop_toBottomOf="@id/tvBirthDate"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
